# python-eol

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements-dev.in  tox.ini
.github/workflows/: build.yml  check_scrapers.yml  release.yml  tox.yml
python_eol/: __init__.py  _docker_utils.py  db.json  db_nep.json  main.py
scripts/: eol_scraper.py  nep_scraper.py
tests/: test_docker_utils.py  test_main.py
